building header & footer

--- a/wp/wp-content/themes/blankslate-child/scss/style.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/style.scss
@@ -9,4 +9,8 @@
   Text Domain: ZeeOne Fitness
 */ 
 
+@import './_variables';
 @import './base';
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,900');
+@import './header';
+@import './footer';
