--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -8,5 +8,65 @@
   Version: 0.1.0
   Text Domain: ZeeOne Fitness
 */
+/**
+* Variables
+*/
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700,900");
+html,
 body {
-  color: purple; }
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0; }
+
+body {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.3rem;
+  font-family: 'Montserrat', sans-serif;
+  display: flex;
+  flex-direction: column; }
+
+a:link,
+a:visited,
+a:active {
+  text-decoration: none; }
+
+a:hover {
+  text-decoration: underline; }
+
+img {
+  max-width: 100%;
+  width: 100%;
+  display: block; }
+
+#header #site-title {
+  align-items: center;
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  padding: 16px 0; }
+  #header #site-title a {
+    color: #ffffff;
+    text-transform: uppercase;
+    text-decoration: none; }
+
+#footer {
+  background-color: #000000;
+  color: #ffba00;
+  padding: 16px; }
+  #footer #social-media {
+    align-items: center;
+    display: flex;
+    justify-content: center; }
+    #footer #social-media li {
+      height: 35px;
+      margin: 0 8px;
+      width: 35px; }
+  #footer #copyright {
+    color: #f4f4f4;
+    font-size: 0.875rem;
+    margin-top: 16px;
+    text-align: center;
+    text-transform: uppercase; }
+    #footer #copyright a {
+      color: #f4f4f4; }
