--- a/wp/wp-content/themes/blankslate-child/scss/base.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/base.scss
@@ -1,17 +1,20 @@
 html,
 body {
   box-sizing: border-box;
+  font-size: 10px;
+  height: 100%;
   padding: 0;
   margin: 0;
 }
 
 body {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.3rem;
-  font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.6rem;
+  font-weight: 400;
+  height: 100%;
+  line-height: 1.3;
 }
 
 a:link,
@@ -25,7 +28,24 @@ a:hover {
 }
 
 img {
+  display: block;
   max-width: 100%;
   width: 100%;
-  display: block;
+}
+
+h1 {
+  font-size: 4.6rem;
+}
+
+.wrapper {
+  padding: 0 $spacing-x2;
+
+  @media ($tablet) {
+  }
+}
+
+#main {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
