--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -15,16 +15,19 @@
 html,
 body {
   box-sizing: border-box;
+  font-size: 10px;
+  height: 100%;
   padding: 0;
   margin: 0; }
 
 body {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.3rem;
-  font-family: 'Montserrat', sans-serif;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.6rem;
+  font-weight: 400;
+  height: 100%;
+  line-height: 1.3; }
 
 a:link,
 a:visited,
@@ -35,9 +38,20 @@ a:hover {
   text-decoration: underline; }
 
 img {
+  display: block;
   max-width: 100%;
-  width: 100%;
-  display: block; }
+  width: 100%; }
+
+h1 {
+  font-size: 4.6rem; }
+
+.wrapper {
+  padding: 0 16px; }
+
+#main {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1; }
 
 #header #site-title {
   align-items: center;
@@ -45,10 +59,25 @@ img {
   display: flex;
   justify-content: center;
   padding: 16px 0; }
+  #header #site-title h1 {
+    font-size: 1.6rem; }
   #header #site-title a {
     color: #ffffff;
     text-transform: uppercase;
     text-decoration: none; }
+
+#default-page-title {
+  background-color: #242424;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: 600;
+  padding: 16px 0;
+  margin-bottom: 16px; }
+  @media (min-width: 1024px) {
+    #default-page-title .wrapper {
+      width: 1024px;
+      margin-left: auto;
+      margin-right: auto; } }
 
 #footer {
   background-color: #000000;
@@ -64,9 +93,41 @@ img {
       width: 35px; }
   #footer #copyright {
     color: #f4f4f4;
-    font-size: 0.875rem;
+    font-size: 1.1rem;
     margin-top: 16px;
     text-align: center;
     text-transform: uppercase; }
     #footer #copyright a {
       color: #f4f4f4; }
+
+#default-page-main {
+  flex-grow: 1;
+  margin-bottom: 16px; }
+  @media (min-width: 1024px) {
+    #default-page-main .wrapper {
+      width: 1024px;
+      margin-left: auto;
+      margin-right: auto; } }
+  #default-page-main .wrapper .content-wrapper {
+    display: flex;
+    flex-direction: column; }
+    @media (min-width: 768px) {
+      #default-page-main .wrapper .content-wrapper {
+        flex-direction: row; } }
+  #default-page-main .content {
+    flex-grow: 1;
+    margin-bottom: 16px; }
+
+#sidebar {
+  background-color: #000000;
+  color: #ffffff;
+  padding: 16px; }
+  @media (min-width: 768px) {
+    #sidebar {
+      width: 250px; } }
+  @media (min-width: 992px) {
+    #sidebar {
+      width: 350px; } }
+
+#featured-image {
+  margin-bottom: 16px; }
