home page build

--- a/wp/wp-content/themes/blankslate-child/scss/footer.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/footer.scss
@@ -12,6 +12,10 @@
       height: 35px;
       margin: 0 $spacing;
       width: 35px;
+
+      img {
+        @include img-responsive;
+      }
     }
   }
 
