--- a/wp/wp-content/themes/blankslate-child/scss/base.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/base.scss
@@ -2,9 +2,9 @@ html,
 body {
   box-sizing: border-box;
   font-size: 10px;
-  height: 100%;
   padding: 0;
   margin: 0;
+  min-height: 100vh;
 }
 
 body {
@@ -13,7 +13,6 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.6rem;
   font-weight: 400;
-  height: 100%;
   line-height: 1.3;
 }
 
@@ -25,12 +24,6 @@ a:active {
 
 a:hover {
   text-decoration: underline;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  width: 100%;
 }
 
 h1 {
