--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -16,9 +16,9 @@ html,
 body {
   box-sizing: border-box;
   font-size: 10px;
-  height: 100%;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  min-height: 100vh; }
 
 body {
   display: flex;
@@ -26,7 +26,6 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.6rem;
   font-weight: 400;
-  height: 100%;
   line-height: 1.3; }
 
 a:link,
@@ -36,11 +35,6 @@ a:active {
 
 a:hover {
   text-decoration: underline; }
-
-img {
-  display: block;
-  max-width: 100%;
-  width: 100%; }
 
 h1 {
   font-size: 4.6rem; }
@@ -79,6 +73,35 @@ h1 {
       margin-left: auto;
       margin-right: auto; } }
 
+#home-header {
+  background-color: #000000;
+  color: #ffffff; }
+  @media (min-width: 992px) {
+    #home-header .wrapper {
+      width: 1024px;
+      margin-left: auto;
+      margin-right: auto; } }
+  #home-header #home-title {
+    padding: 48px 0;
+    text-transform: uppercase; }
+    #home-header #home-title .slogan {
+      font-size: 4.2rem;
+      font-weight: 900;
+      line-height: 0.8;
+      width: 290px; }
+      @media (min-width: 768px) {
+        #home-header #home-title .slogan {
+          font-size: 6.2rem;
+          width: 430px; } }
+    #home-header #home-title h1 {
+      color: #ffba00;
+      font-size: 2.4rem;
+      font-weight: 300;
+      line-height: 1; }
+      @media (min-width: 768px) {
+        #home-header #home-title h1 {
+          font-size: 3rem; } }
+
 #footer {
   background-color: #000000;
   color: #ffba00;
@@ -91,6 +114,11 @@ h1 {
       height: 35px;
       margin: 0 8px;
       width: 35px; }
+      #footer #social-media li img {
+        display: block;
+        height: 100%;
+        min-width: 100%;
+        width: 100%; }
   #footer #copyright {
     color: #f4f4f4;
     font-size: 1.1rem;
@@ -116,18 +144,69 @@ h1 {
         flex-direction: row; } }
   #default-page-main .content {
     flex-grow: 1;
-    margin-bottom: 16px; }
+    margin-bottom: 16px;
+    margin-right: 16px; }
 
 #sidebar {
   background-color: #000000;
   color: #ffffff;
+  flex-shrink: 0;
   padding: 16px; }
   @media (min-width: 768px) {
     #sidebar {
-      width: 250px; } }
+      width: 300px; } }
   @media (min-width: 992px) {
     #sidebar {
-      width: 350px; } }
+      width: 400px; } }
+  #sidebar .sidebar-title {
+    font-size: 3rem;
+    font-weight: 600;
+    line-height: 1;
+    margin-bottom: 8px;
+    text-transform: uppercase; }
 
 #featured-image {
-  margin-bottom: 16px; }
+  margin-bottom: 16px;
+  display: block;
+  height: 100%;
+  min-width: 100%;
+  width: 100%; }
+
+.section {
+  padding: 32px 0; }
+  @media (min-width: 992px) {
+    .section {
+      padding: 48px 0; } }
+  .section h2 {
+    font-size: 2.6rem;
+    font-weight: 600;
+    margin-bottom: 16px;
+    text-align: center;
+    text-transform: uppercase; }
+  @media (min-width: 992px) {
+    .section .wrapper {
+      width: 1024px;
+      margin-left: auto;
+      margin-right: auto; } }
+  .section .section-wrapper {
+    display: flex;
+    flex-direction: column; }
+    @media (min-width: 768px) {
+      .section .section-wrapper {
+        flex-direction: row;
+        justify-content: space-between; } }
+  .section .section-item {
+    margin-bottom: 32px; }
+    @media (min-width: 992px) {
+      .section .section-item {
+        margin-bottom: 0; } }
+  @media (min-width: 768px) {
+    .section .section-3col {
+      flex-basis: 30%; } }
+  .section.offers {
+    background-color: #333333;
+    color: #ffffff;
+    text-align: center; }
+  @media (min-width: 768px) {
+    .section.about .wrapper {
+      width: 500px; } }
