--- a/wp/wp-content/themes/blankslate-child/scss/_variables.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/_variables.scss
@@ -21,6 +21,12 @@ $tablet: 'min-width: 768px';
 $desktop: 'min-width: 992px';
 $desktop-lg: 'min-width: 1024px';
 
+@mixin wrapper-md {
+  width: 768px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @mixin wrapper-lg {
   width: 1024px;
   margin-left: auto;
