--- a/wp/wp-content/themes/blankslate-child/scss/header.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/header.scss
@@ -57,6 +57,10 @@
         font-size: 6.2rem;
         width: 430px;
       }
+
+      @media ($desktop) {
+        font-size: 7.2rem;
+      }
     }
 
     h1 {
