--- a/wp/wp-content/themes/blankslate-child/scss/contact.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/contact.scss
@@ -10,13 +10,34 @@
     }
 
     .form-block {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr;
+      grid-row-gap: 0;
       margin-bottom: $spacing;
-      display: flex;
+
+    }
+
+    .submit-btn-wrapper,
+    .recaptcha-wrapper {
+      justify-items: end;
+    }
+
+    .submit-btn-wrapper {
+      grid-template-columns: 1fr;
+    }
+
+    .ajax-loader {
+      @media ($tablet) {
+        grid-row-start: 1;
+        grid-row-end: 2;
+        justify-self: end;
+      }
     }
 
     .form-block-wrapper {
       @media ($tablet) {
-        width: 49%;
+        width: 100%;
       }
     }
   
@@ -26,6 +47,15 @@
       border: none;
       padding: $spacing;
       width: 100%;
+    }
+
+    input[type=submit] {
+      width: 100%;
+
+      @media ($tablet) {
+        grid-column-start: 2;
+        grid-column-end: 3;
+      }
     }
   }
 }
