--- a/wp/wp-content/themes/blankslate-child/scss/section.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/section.scss
@@ -1,5 +1,5 @@
 .section {
-  padding: $spacing-x4 0;
+  padding: $spacing-x6 0;
 
   @media ($desktop) {
     padding: $spacing-x6 0;
@@ -13,6 +13,12 @@
     text-transform: uppercase;
   }
 
+  h3 {
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: $spacing-x2;
+  }
+
   .wrapper {
     @media ($desktop-lg) {
       @include wrapper-lg;
@@ -20,21 +26,10 @@
   }
 
   .section-wrapper {
-    display: flex;
-    flex-direction: column;
+    padding: 0 $spacing-x3;
 
-    @media ($tablet) {
-      flex-direction: row;
-      justify-content: space-between;
-    }
-  }
-
-  
-  .section-item {
-    margin-bottom: $spacing-x4;
-    
     @media ($desktop) {
-      margin-bottom: 0;
+      @include wrapper-lg;
     }
   }
   
@@ -48,10 +43,30 @@
     background-color: $greyDark;
     color: $white;
     text-align: center;
+
+    .section-wrapper {
+      display: grid;
+      grid-template-rows: repeat(3, 1fr);
+      grid-row-gap: $spacing-x3;
+      padding: 0 $spacing-x2;
+  
+      @media ($tablet) {
+        grid-column-gap: $spacing-x2;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 1fr;
+      }
+
+      @media ($desktop) {
+        @include wrapper-lg;
+      }
+    }
   }
 
   &.about {
-    .wrapper {
+    .section-wrapper {
+      display: grid;
+      text-align: center;
+
       @media ($tablet) {
         margin: 0 auto;
         width: 500px;
@@ -63,9 +78,16 @@
     background-color: $black;
     color: $white;
 
-    .wrapper {
-      @media ($desktop) {
+    .form-block {
+      .wpcf7-form-control-wrap {
+        width: 100%;
+      }
+    }
+
+    .section-wrapper {
+      @media ($tablet) {
         @include wrapper-md;
+        width: 600px;
       }
     }
   }
