--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -176,7 +176,7 @@ h1 {
   width: 100%; }
 
 .section {
-  padding: 32px 0; }
+  padding: 48px 0; }
   @media (min-width: 992px) {
     .section {
       padding: 48px 0; } }
@@ -186,23 +186,22 @@ h1 {
     margin-bottom: 16px;
     text-align: center;
     text-transform: uppercase; }
+  .section h3 {
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 16px; }
   @media (min-width: 1024px) {
     .section .wrapper {
       width: 1024px;
       margin-left: auto;
       margin-right: auto; } }
   .section .section-wrapper {
-    display: flex;
-    flex-direction: column; }
-    @media (min-width: 768px) {
-      .section .section-wrapper {
-        flex-direction: row;
-        justify-content: space-between; } }
-  .section .section-item {
-    margin-bottom: 32px; }
+    padding: 0 24px; }
     @media (min-width: 992px) {
-      .section .section-item {
-        margin-bottom: 0; } }
+      .section .section-wrapper {
+        width: 1024px;
+        margin-left: auto;
+        margin-right: auto; } }
   @media (min-width: 768px) {
     .section .section-3col {
       flex-basis: 30%; } }
@@ -210,18 +209,39 @@ h1 {
     background-color: #333333;
     color: #ffffff;
     text-align: center; }
-  @media (min-width: 768px) {
-    .section.about .wrapper {
-      margin: 0 auto;
-      width: 500px; } }
+    .section.offers .section-wrapper {
+      display: grid;
+      grid-template-rows: repeat(3, 1fr);
+      grid-row-gap: 24px;
+      padding: 0 16px; }
+      @media (min-width: 768px) {
+        .section.offers .section-wrapper {
+          grid-column-gap: 16px;
+          grid-template-columns: repeat(3, 1fr);
+          grid-template-rows: 1fr; } }
+      @media (min-width: 992px) {
+        .section.offers .section-wrapper {
+          width: 1024px;
+          margin-left: auto;
+          margin-right: auto; } }
+  .section.about .section-wrapper {
+    display: grid;
+    text-align: center; }
+    @media (min-width: 768px) {
+      .section.about .section-wrapper {
+        margin: 0 auto;
+        width: 500px; } }
   .section.contact {
     background-color: #000000;
     color: #ffffff; }
-    @media (min-width: 992px) {
-      .section.contact .wrapper {
+    .section.contact .form-block .wpcf7-form-control-wrap {
+      width: 100%; }
+    @media (min-width: 768px) {
+      .section.contact .section-wrapper {
         width: 768px;
         margin-left: auto;
-        margin-right: auto; } }
+        margin-right: auto;
+        width: 600px; } }
 
 .contact form {
   display: flex;
@@ -232,17 +252,36 @@ h1 {
       justify-content: space-between;
       display: flex; } }
   .contact form .form-block {
-    margin-bottom: 8px;
-    display: flex; }
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-row-gap: 0;
+    margin-bottom: 8px; }
+  .contact form .submit-btn-wrapper,
+  .contact form .recaptcha-wrapper {
+    justify-items: end; }
+  .contact form .submit-btn-wrapper {
+    grid-template-columns: 1fr; }
+  @media (min-width: 768px) {
+    .contact form .ajax-loader {
+      grid-row-start: 1;
+      grid-row-end: 2;
+      justify-self: end; } }
   @media (min-width: 768px) {
     .contact form .form-block-wrapper {
-      width: 49%; } }
+      width: 100%; } }
   .contact form input[type=text],
   .contact form input[type=email],
   .contact form textarea {
     border: none;
     padding: 8px;
     width: 100%; }
+  .contact form input[type=submit] {
+    width: 100%; }
+    @media (min-width: 768px) {
+      .contact form input[type=submit] {
+        grid-column-start: 2;
+        grid-column-end: 3; } }
 
 .btn {
   background-color: #ffba00;
