--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -21,8 +21,8 @@ body {
   min-height: 100vh; }
 
 body {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
   font-family: 'Montserrat', sans-serif;
   font-size: 1.6rem;
   font-weight: 400;
@@ -43,9 +43,8 @@ h1 {
   padding: 0 16px; }
 
 #main {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1; }
+  display: grid;
+  grid-template-rows: auto 1fr; }
 
 #header #site-title {
   align-items: center;
@@ -63,10 +62,11 @@ h1 {
 #default-page-title {
   background-color: #242424;
   color: #ffffff;
-  text-transform: uppercase;
   font-weight: 600;
   padding: 16px 0;
-  margin-bottom: 16px; }
+  text-transform: uppercase; }
+  #default-page-title h1 {
+    font-size: 3.2rem; }
   @media (min-width: 1024px) {
     #default-page-title .wrapper {
       width: 1024px;
@@ -76,13 +76,19 @@ h1 {
 #home-header {
   background-color: #000000;
   color: #ffffff; }
-  @media (min-width: 992px) {
-    #home-header .wrapper {
-      width: 1024px;
-      margin-left: auto;
-      margin-right: auto; } }
+  #home-header .wrapper {
+    align-items: center;
+    display: grid;
+    height: 300px; }
+    @media (min-width: 768px) {
+      #home-header .wrapper {
+        height: 400px; } }
+    @media (min-width: 992px) {
+      #home-header .wrapper {
+        width: 1024px;
+        margin-left: auto;
+        margin-right: auto; } }
   #home-header #home-title {
-    padding: 48px 0;
     text-transform: uppercase; }
     #home-header #home-title .slogan {
       font-size: 4.2rem;
@@ -169,11 +175,12 @@ h1 {
     text-transform: uppercase; }
 
 #featured-image {
-  margin-bottom: 16px;
-  display: block;
-  height: 100%;
-  min-width: 100%;
-  width: 100%; }
+  margin-bottom: 16px; }
+  #featured-image img {
+    display: block;
+    height: 100%;
+    min-width: 100%;
+    width: 100%; }
 
 .section {
   padding: 48px 0; }
@@ -183,7 +190,7 @@ h1 {
   .section h2 {
     font-size: 2.6rem;
     font-weight: 600;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
     text-align: center;
     text-transform: uppercase; }
   .section h3 {
@@ -206,8 +213,7 @@ h1 {
     .section .section-3col {
       flex-basis: 30%; } }
   .section.offers {
-    background-color: #333333;
-    color: #ffffff;
+    color: #333333;
     text-align: center; }
     .section.offers .section-wrapper {
       display: grid;
@@ -216,21 +222,34 @@ h1 {
       padding: 0 16px; }
       @media (min-width: 768px) {
         .section.offers .section-wrapper {
-          grid-column-gap: 16px;
+          grid-column-gap: 24px;
           grid-template-columns: repeat(3, 1fr);
           grid-template-rows: 1fr; } }
       @media (min-width: 992px) {
         .section.offers .section-wrapper {
           width: 1024px;
           margin-left: auto;
-          margin-right: auto; } }
-  .section.about .section-wrapper {
-    display: grid;
-    text-align: center; }
-    @media (min-width: 768px) {
-      .section.about .section-wrapper {
-        margin: 0 auto;
-        width: 500px; } }
+          margin-right: auto;
+          padding: 0 48px; } }
+    .section.offers .offers-item {
+      align-items: center;
+      color: #ffffff;
+      background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("/wp-content/uploads/2019/02/banner-example.jpg") no-repeat center center;
+      display: grid;
+      height: 250px;
+      justify-items: center;
+      font-weight: 600;
+      text-transform: uppercase; }
+  .section.about {
+    background-color: #333333;
+    color: #ffffff; }
+    .section.about .section-wrapper {
+      display: grid;
+      text-align: center; }
+      @media (min-width: 768px) {
+        .section.about .section-wrapper {
+          margin: 0 auto;
+          width: 500px; } }
   .section.contact {
     background-color: #000000;
     color: #ffffff; }
