--- a/wp/wp-content/themes/blankslate-child/scss/base.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/base.scss
@@ -40,4 +40,11 @@ h1 {
 #main {
   display: grid;
   grid-template-rows: auto 1fr;
+  grid-row-gap: $spacing-x2;
+}
+
+.home {
+  #main {
+    grid-row-gap: 0;
+  }
 }
