--- a/wp/wp-content/themes/blankslate-child/scss/section.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/section.scss
@@ -65,17 +65,36 @@
       align-items: center;
       color: $white;
       // background-color: $greyDark;
-      background: linear-gradient(
-        rgba(0, 0, 0, 0.8),
-        rgba(0, 0, 0, 0.8)
-      ),
-      url('/wp-content/uploads/2019/02/banner-example.jpg')  no-repeat center center;
 
       display: grid;
       height: 250px;
       justify-items: center;
       font-weight: 600;
       text-transform: uppercase;
+
+      a {
+        align-items: center;
+        background: linear-gradient(
+          rgba(0, 0, 0, 0.7),
+          rgba(0, 0, 0, 0.7)
+        ),
+        url('/wp-content/uploads/2019/02/banner-example.jpg')  no-repeat center center;
+  
+        display: grid;
+        color: $white;
+        justify-items: center;
+        height: 100%;
+        width: 100%;
+
+        &:hover {
+          text-decoration: none;
+          background: linear-gradient(
+            rgba(0, 0, 0, 0.9),
+            rgba(0, 0, 0, 0.9)
+          ),
+          url('/wp-content/uploads/2019/02/banner-example.jpg')  no-repeat center center;
+        }
+      }
     }
   }
 
