--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -40,7 +40,16 @@ h1 {
   font-size: 4.6rem; }
 
 .wrapper {
-  padding: 0 16px; }
+  padding: 0 24px; }
+  @media (min-width: 768px) {
+    .wrapper {
+      padding: 0 24px; } }
+  @media (min-width: 1200px) {
+    .wrapper {
+      width: 1024px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 0; } }
 
 #main {
   display: grid;
@@ -71,7 +80,7 @@ h1 {
   text-transform: uppercase; }
   #default-page-title h1 {
     font-size: 3.2rem; }
-  @media (min-width: 1024px) {
+  @media (min-width: 1200px) {
     #default-page-title .wrapper {
       width: 1024px;
       margin-left: auto;
@@ -83,15 +92,28 @@ h1 {
   #home-header .wrapper {
     align-items: center;
     display: grid;
-    height: 300px; }
-    @media (min-width: 768px) {
-      #home-header .wrapper {
-        height: 400px; } }
-    @media (min-width: 992px) {
+    padding-top: 80px;
+    padding-bottom: 80px; }
+    @media (min-width: 1200px) {
       #home-header .wrapper {
         width: 1024px;
         margin-left: auto;
         margin-right: auto; } }
+  #home-header #featured-image {
+    position: relative;
+    margin-bottom: 0; }
+    #home-header #featured-image .wrapper {
+      align-items: center;
+      bottom: 0;
+      display: grid;
+      height: auto;
+      left: 0;
+      right: 0;
+      padding: 0 48px;
+      position: absolute;
+      top: 0; }
+    #home-header #featured-image img {
+      height: auto; }
   #home-header #home-title {
     text-transform: uppercase; }
     #home-header #home-title .slogan {
@@ -144,7 +166,7 @@ h1 {
 #default-page-main {
   flex-grow: 1;
   margin-bottom: 16px; }
-  @media (min-width: 1024px) {
+  @media (min-width: 1200px) {
     #default-page-main .wrapper {
       width: 1024px;
       margin-left: auto;
@@ -188,7 +210,7 @@ h1 {
 
 .section {
   padding: 48px 0; }
-  @media (min-width: 992px) {
+  @media (min-width: 1200px) {
     .section {
       padding: 48px 0; } }
   .section h2 {
@@ -201,18 +223,22 @@ h1 {
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 16px; }
-  @media (min-width: 1024px) {
+  @media (min-width: 1200px) {
     .section .wrapper {
       width: 1024px;
       margin-left: auto;
       margin-right: auto; } }
   .section .section-wrapper {
     padding: 0 24px; }
-    @media (min-width: 992px) {
+    @media (min-width: 768px) {
+      .section .section-wrapper {
+        padding: 0 24px; } }
+    @media (min-width: 1200px) {
       .section .section-wrapper {
         width: 1024px;
         margin-left: auto;
-        margin-right: auto; } }
+        margin-right: auto;
+        padding: 0; } }
   @media (min-width: 768px) {
     .section .section-3col {
       flex-basis: 30%; } }
@@ -222,19 +248,12 @@ h1 {
     .section.offers .section-wrapper {
       display: grid;
       grid-template-rows: repeat(3, 1fr);
-      grid-row-gap: 24px;
-      padding: 0 16px; }
+      grid-row-gap: 24px; }
       @media (min-width: 768px) {
         .section.offers .section-wrapper {
           grid-column-gap: 24px;
           grid-template-columns: repeat(3, 1fr);
           grid-template-rows: 1fr; } }
-      @media (min-width: 992px) {
-        .section.offers .section-wrapper {
-          width: 1024px;
-          margin-left: auto;
-          margin-right: auto;
-          padding: 0 48px; } }
     .section.offers .offers-item {
       align-items: center;
       color: #ffffff;
@@ -271,9 +290,6 @@ h1 {
       width: 100%; }
     @media (min-width: 768px) {
       .section.contact .section-wrapper {
-        width: 768px;
-        margin-left: auto;
-        margin-right: auto;
         width: 600px; } }
 
 .contact form {
