updated banner. start pricing page

--- a/wp/wp-content/themes/blankslate-child/scss/featured-image.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/featured-image.scss
@@ -1,6 +1,11 @@
 #featured-image {
   margin-bottom: $spacing-x2;
 
+  @media ($desktop-md) {
+    max-height: 300px;
+    overflow: hidden;
+  }
+
   img {
     @include img-responsive;
   }
