--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -53,11 +53,7 @@ h1 {
 
 #main {
   display: grid;
-  grid-template-rows: auto 1fr;
-  grid-row-gap: 16px; }
-
-.home #main {
-  grid-row-gap: 0; }
+  grid-template-rows: auto 1fr; }
 
 #header #site-title {
   align-items: center;
@@ -73,11 +69,15 @@ h1 {
     text-decoration: none; }
 
 #default-page-title {
-  background-color: #242424;
+  background-color: rgba(0, 0, 0, 0.5);
   color: #ffffff;
   font-weight: 600;
+  position: absolute;
+  left: 0;
+  right: 0;
   padding: 16px 0;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  text-align: center; }
   #default-page-title h1 {
     font-size: 3.2rem; }
   @media (min-width: 1200px) {
@@ -223,6 +223,10 @@ h1 {
 
 #featured-image {
   margin-bottom: 16px; }
+  @media (min-width: 992px) {
+    #featured-image {
+      max-height: 300px;
+      overflow: hidden; } }
   #featured-image img {
     display: block;
     height: 100%;
@@ -283,14 +287,19 @@ h1 {
       justify-items: center;
       font-weight: 600;
       text-transform: uppercase; }
-      .section.offers .offers-item a {
-        align-items: center;
-        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/wp-content/uploads/2019/02/banner-example.jpg") no-repeat center center;
-        display: grid;
-        color: #ffffff;
-        justify-items: center;
+      .section.offers .offers-item p {
         height: 100%;
         width: 100%; }
+      .section.offers .offers-item a {
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/wp-content/uploads/2019/02/banner-example.jpg") no-repeat center center;
+        height: 100%;
+        width: 100%;
+        padding: 16px;
+        align-items: center;
+        display: grid;
+        justify-items: center;
+        color: #ffffff;
+        font-size: 2.6rem; }
         .section.offers .offers-item a:hover {
           text-decoration: none;
           background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url("/wp-content/uploads/2019/02/banner-example.jpg") no-repeat center center; }
@@ -311,7 +320,9 @@ h1 {
       width: 100%; }
     @media (min-width: 768px) {
       .section.contact .section-wrapper {
-        width: 600px; } }
+        width: 600px;
+        margin: 0 auto;
+        padding: 0; } }
 
 .contact form {
   display: flex;
