--- a/wp/wp-content/themes/blankslate-child/scss/footer.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/footer.scss
@@ -12,12 +12,16 @@
       height: 35px;
       margin: 0 $spacing;
       width: 35px;
+
+      img {
+        @include img-responsive;
+      }
     }
   }
 
   #copyright {
     color: #f4f4f4;
-    font-size: 0.875rem;
+    font-size: 1.1rem;
     margin-top: $spacing-x2;
     text-align: center;
     text-transform: uppercase;
