--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -15,16 +15,18 @@
 html,
 body {
   box-sizing: border-box;
+  font-size: 10px;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  min-height: 100vh; }
 
 body {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.3rem;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
   font-family: 'Montserrat', sans-serif;
-  display: flex;
-  flex-direction: column; }
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.3; }
 
 a:link,
 a:visited,
@@ -34,10 +36,24 @@ a:active {
 a:hover {
   text-decoration: underline; }
 
-img {
-  max-width: 100%;
-  width: 100%;
-  display: block; }
+h1 {
+  font-size: 4.6rem; }
+
+.wrapper {
+  padding: 0 24px; }
+  @media (min-width: 768px) {
+    .wrapper {
+      padding: 0 24px; } }
+  @media (min-width: 1200px) {
+    .wrapper {
+      width: 1024px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 0; } }
+
+#main {
+  display: grid;
+  grid-template-rows: auto 1fr; }
 
 #header #site-title {
   align-items: center;
@@ -45,10 +61,102 @@ img {
   display: flex;
   justify-content: center;
   padding: 16px 0; }
+  #header #site-title h1 {
+    font-size: 1.6rem; }
   #header #site-title a {
     color: #ffffff;
     text-transform: uppercase;
     text-decoration: none; }
+
+#default-page-title {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #ffffff;
+  font-weight: 600;
+  position: absolute;
+  left: 0;
+  right: 0;
+  padding: 16px 0;
+  text-transform: uppercase;
+  text-align: center; }
+  #default-page-title h1 {
+    font-size: 3.2rem; }
+  @media (min-width: 1200px) {
+    #default-page-title .wrapper {
+      width: 1024px;
+      margin-left: auto;
+      margin-right: auto; } }
+
+#home-header {
+  color: #ffffff; }
+  #home-header .wrapper {
+    align-items: center;
+    display: grid;
+    padding-top: 80px;
+    padding-bottom: 80px; }
+    @media (min-width: 1200px) {
+      #home-header .wrapper {
+        width: 1024px;
+        margin-left: auto;
+        margin-right: auto; } }
+  #home-header #featured-header {
+    position: relative;
+    margin-bottom: 0; }
+    #home-header #featured-header #home-header-image {
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-color: transparent;
+      background-size: cover; }
+    #home-header #featured-header #home-header-video {
+      overflow: hidden;
+      position: relative; }
+      #home-header #featured-header #home-header-video .wrapper {
+        padding-top: 0;
+        padding-bottom: 0; }
+      #home-header #featured-header #home-header-video #wp-custom-header {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0; }
+      #home-header #featured-header #home-header-video #wp-custom-header-video {
+        height: 100%;
+        width: 100%; }
+      #home-header #featured-header #home-header-video #wp-custom-header-video-button {
+        display: none; }
+      #home-header #featured-header #home-header-video #home-title {
+        padding: 16px 0;
+        position: relative;
+        z-index: 10; }
+        @media (min-width: 768px) {
+          #home-header #featured-header #home-header-video #home-title {
+            padding: 48px 0; } }
+        @media (min-width: 992px) {
+          #home-header #featured-header #home-header-video #home-title {
+            padding: 64px; } }
+        @media (min-width: 1200px) {
+          #home-header #featured-header #home-header-video #home-title {
+            padding: 80px; } }
+  #home-header #home-title {
+    text-transform: uppercase; }
+    #home-header #home-title .slogan {
+      font-size: 4.2rem;
+      font-weight: 900;
+      line-height: 0.8;
+      width: 290px; }
+      @media (min-width: 768px) {
+        #home-header #home-title .slogan {
+          font-size: 6.2rem;
+          width: 430px; } }
+      @media (min-width: 992px) {
+        #home-header #home-title .slogan {
+          font-size: 7.2rem; } }
+    #home-header #home-title h1 {
+      color: #ffba00;
+      font-size: 2.4rem;
+      font-weight: 300;
+      line-height: 1; }
+      @media (min-width: 768px) {
+        #home-header #home-title h1 {
+          font-size: 3rem; } }
 
 #footer {
   background-color: #000000;
@@ -62,11 +170,245 @@ img {
       height: 35px;
       margin: 0 8px;
       width: 35px; }
+      #footer #social-media li img {
+        display: block;
+        height: 100%;
+        min-width: 100%;
+        width: 100%; }
   #footer #copyright {
     color: #f4f4f4;
-    font-size: 0.875rem;
+    font-size: 1.1rem;
     margin-top: 16px;
     text-align: center;
     text-transform: uppercase; }
     #footer #copyright a {
       color: #f4f4f4; }
+
+#default-page-main {
+  flex-grow: 1;
+  margin-bottom: 16px; }
+  @media (min-width: 1200px) {
+    #default-page-main .wrapper {
+      width: 1024px;
+      margin-left: auto;
+      margin-right: auto; } }
+  #default-page-main .wrapper .content-wrapper {
+    display: flex;
+    flex-direction: column; }
+    @media (min-width: 768px) {
+      #default-page-main .wrapper .content-wrapper {
+        flex-direction: row; } }
+  #default-page-main .content {
+    flex-grow: 1;
+    margin-bottom: 16px;
+    margin-right: 16px; }
+
+#sidebar {
+  background-color: #000000;
+  color: #ffffff;
+  flex-shrink: 0;
+  padding: 16px; }
+  @media (min-width: 768px) {
+    #sidebar {
+      width: 300px; } }
+  @media (min-width: 992px) {
+    #sidebar {
+      width: 400px; } }
+  #sidebar .sidebar-title {
+    font-size: 3rem;
+    font-weight: 600;
+    line-height: 1;
+    margin-bottom: 8px;
+    text-transform: uppercase; }
+
+#featured-image {
+  margin-bottom: 16px; }
+  @media (min-width: 992px) {
+    #featured-image {
+      max-height: 300px;
+      overflow: hidden; } }
+  #featured-image img {
+    display: block;
+    height: 100%;
+    min-width: 100%;
+    width: 100%; }
+
+.section {
+  padding: 48px 0; }
+  @media (min-width: 1200px) {
+    .section {
+      padding: 48px 0; } }
+  .section h2 {
+    font-size: 2.6rem;
+    font-weight: 600;
+    margin-bottom: 24px;
+    text-align: center;
+    text-transform: uppercase; }
+  .section h3 {
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 16px; }
+  @media (min-width: 1200px) {
+    .section .wrapper {
+      width: 1024px;
+      margin-left: auto;
+      margin-right: auto; } }
+  .section .section-wrapper {
+    padding: 0 24px; }
+    @media (min-width: 768px) {
+      .section .section-wrapper {
+        padding: 0 24px; } }
+    @media (min-width: 1200px) {
+      .section .section-wrapper {
+        width: 1024px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0; } }
+  @media (min-width: 768px) {
+    .section .section-3col {
+      flex-basis: 30%; } }
+  .section.offers {
+    color: #333333;
+    text-align: center; }
+    .section.offers .section-wrapper {
+      display: grid;
+      grid-template-rows: repeat(3, 1fr);
+      grid-row-gap: 24px; }
+      @media (min-width: 768px) {
+        .section.offers .section-wrapper {
+          grid-column-gap: 24px;
+          grid-template-columns: repeat(3, 1fr);
+          grid-template-rows: 1fr; } }
+    .section.offers .offers-item {
+      align-items: center;
+      color: #ffffff;
+      display: grid;
+      height: 250px;
+      justify-items: center;
+      font-weight: 600;
+      text-transform: uppercase; }
+      .section.offers .offers-item p {
+        height: 100%;
+        width: 100%; }
+      .section.offers .offers-item a {
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/wp-content/uploads/2019/02/banner-example.jpg") no-repeat center center;
+        height: 100%;
+        width: 100%;
+        padding: 16px;
+        align-items: center;
+        display: grid;
+        justify-items: center;
+        color: #ffffff;
+        font-size: 2.6rem; }
+        .section.offers .offers-item a:hover {
+          text-decoration: none;
+          background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url("/wp-content/uploads/2019/02/banner-example.jpg") no-repeat center center; }
+  .section.about {
+    background-color: #333333;
+    color: #ffffff; }
+    .section.about .section-wrapper {
+      display: grid;
+      text-align: center; }
+      @media (min-width: 768px) {
+        .section.about .section-wrapper {
+          margin: 0 auto;
+          width: 500px; } }
+  .section.contact {
+    background-color: #000000;
+    color: #ffffff; }
+    .section.contact .form-block .wpcf7-form-control-wrap {
+      width: 100%; }
+    @media (min-width: 768px) {
+      .section.contact .section-wrapper {
+        width: 600px;
+        margin: 0 auto;
+        padding: 0; } }
+
+.contact form {
+  display: flex;
+  flex-direction: column; }
+  @media (min-width: 768px) {
+    .contact form {
+      flex-direction: row;
+      justify-content: space-between;
+      display: flex; } }
+  .contact form .form-block {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-row-gap: 0;
+    margin-bottom: 8px; }
+  .contact form .submit-btn-wrapper,
+  .contact form .recaptcha-wrapper {
+    justify-items: end; }
+  .contact form .submit-btn-wrapper {
+    grid-template-columns: 1fr; }
+  @media (min-width: 768px) {
+    .contact form .ajax-loader {
+      grid-row-start: 1;
+      grid-row-end: 2;
+      justify-self: end; } }
+  @media (min-width: 768px) {
+    .contact form .form-block-wrapper {
+      width: 100%; } }
+  .contact form input[type=text],
+  .contact form input[type=email],
+  .contact form textarea {
+    border: none;
+    padding: 8px;
+    width: 100%; }
+  .contact form input[type=submit] {
+    width: 100%; }
+    @media (min-width: 768px) {
+      .contact form input[type=submit] {
+        grid-column-start: 2;
+        grid-column-end: 3; } }
+
+.btn {
+  background-color: #ffba00;
+  border: none;
+  color: #000000;
+  cursor: pointer;
+  font-size: 1.2rem;
+  padding: 8px;
+  text-transform: uppercase; }
+  .btn:hover {
+    background-color: #ffba01; }
+
+#coming-soon {
+  align-items: center;
+  background: transparent url(http://localhost:8000/wp-content/uploads/2019/04/main-bg.jpg) no-repeat center center;
+  background-size: cover;
+  display: flex;
+  height: 100vh;
+  justify-content: center; }
+  #coming-soon .main-content {
+    position: relative;
+    top: 70px; }
+  #coming-soon .title {
+    color: #ffffff;
+    line-height: 1;
+    margin-bottom: 16px;
+    text-align: center; }
+    #coming-soon .title .slogan {
+      font-size: 4rem;
+      font-weight: 900;
+      text-transform: uppercase; }
+      @media (min-width: 768px) {
+        #coming-soon .title .slogan {
+          font-size: 5rem; } }
+      @media (min-width: 992px) {
+        #coming-soon .title .slogan {
+          font-size: 7.2rem; } }
+    #coming-soon .title h1 {
+      font-size: 3rem; }
+      @media (min-width: 768px) {
+        #coming-soon .title h1 {
+          font-size: 4rem; } }
+      #coming-soon .title h1 .yel {
+        color: #ffba00; }
+  #coming-soon .social {
+    display: flex;
+    justify-content: center; }
+    #coming-soon .social svg {
+      fill: #ffba00; }
