--- a/wp/wp-content/themes/blankslate-child/scss/base.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/base.scss
@@ -2,9 +2,11 @@ html,
 body {
   box-sizing: border-box;
   font-size: 10px;
+  font-smoothing: antialiased;
   padding: 0;
   margin: 0;
   min-height: 100vh;
+  text-rendering: optimizeLegibility;
 }
 
 body {
@@ -12,7 +14,7 @@ body {
   grid-template-rows: auto 1fr auto;
   font-family: 'Montserrat', sans-serif;
   font-size: 1.6rem;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.3;
 }
 
@@ -25,6 +27,14 @@ a:active {
 a:hover {
   text-decoration: underline;
 }
+
+.img-responsive {
+  display: block;
+  height: 100%;
+  min-width: 100%;
+  width: 100%;
+}
+
 
 h1 {
   font-size: 4.6rem;
@@ -49,3 +59,16 @@ h1 {
   display: grid;
   grid-template-rows: auto 1fr;
 }
+
+.heading1 {
+  font-size: 3.2rem;
+  margin-bottom: $spacing-x2;
+
+  @media ($desktop-md) {
+    margin-bottom: $spacing-x3;
+  }
+};
+
+.h2 {};
+
+.h3 {}
