--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -16,16 +16,18 @@ html,
 body {
   box-sizing: border-box;
   font-size: 10px;
+  font-smoothing: antialiased;
   padding: 0;
   margin: 0;
-  min-height: 100vh; }
+  min-height: 100vh;
+  text-rendering: optimizeLegibility; }
 
 body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   font-family: 'Montserrat', sans-serif;
   font-size: 1.6rem;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.3; }
 
 a:link,
@@ -36,6 +38,12 @@ a:active {
 a:hover {
   text-decoration: underline; }
 
+.img-responsive {
+  display: block;
+  height: 100%;
+  min-width: 100%;
+  width: 100%; }
+
 h1 {
   font-size: 4.6rem; }
 
@@ -43,7 +51,7 @@ h1 {
   padding: 0 24px; }
   @media (min-width: 768px) {
     .wrapper {
-      padding: 0 24px;
+      padding: 0 16px;
       margin-left: auto;
       margin-right: auto; } }
   @media (min-width: 992px) {
@@ -54,6 +62,13 @@ h1 {
 #main {
   display: grid;
   grid-template-rows: auto 1fr; }
+
+.heading1 {
+  font-size: 3.2rem;
+  margin-bottom: 16px; }
+  @media (min-width: 992px) {
+    .heading1 {
+      margin-bottom: 24px; } }
 
 #header #site-title {
   align-items: center;
@@ -224,93 +239,59 @@ h1 {
     min-width: 100%;
     width: 100%; }
 
-.section {
-  padding: 48px 0; }
-  @media (min-width: 1200px) {
-    .section {
-      padding: 48px 0; } }
-  .section h2 {
-    font-size: 2.6rem;
+.row {
+  padding: 24px 0; }
+  @media (min-width: 768px) {
+    .row {
+      padding: 40px 0; } }
+  .row .heading1 {
+    font-size: 2.4rem;
     font-weight: 600;
-    margin-bottom: 24px;
     text-align: center;
     text-transform: uppercase; }
-  .section h3 {
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 16px; }
-  @media (min-width: 1200px) {
-    .section .wrapper {
-      width: 1024px; } }
-  .section .section-wrapper {
-    padding: 0 24px; }
+  .row .block-inner {
+    display: flex;
+    flex-direction: column; }
     @media (min-width: 768px) {
-      .section .section-wrapper {
-        padding: 0 24px; } }
-    @media (min-width: 1200px) {
-      .section .section-wrapper {
-        width: 1024px;
-        padding: 0; } }
-  @media (min-width: 768px) {
-    .section .section-3col {
-      flex-basis: 30%; } }
-  .section.offers {
-    color: #333333;
-    text-align: center; }
-    .section.offers .section-wrapper {
-      display: grid;
-      grid-template-rows: repeat(3, 1fr);
-      grid-row-gap: 24px; }
-      @media (min-width: 768px) {
-        .section.offers .section-wrapper {
-          grid-column-gap: 24px;
-          grid-template-columns: repeat(3, 1fr);
-          grid-template-rows: 1fr; } }
-    .section.offers .offers-item {
+      .row .block-inner {
+        flex-direction: row;
+        justify-content: space-between; } }
+    .row .block-inner .block {
       align-items: center;
-      color: #ffffff;
-      display: grid;
+      background-color: #f4f4f4;
+      display: flex;
       height: 250px;
-      justify-items: center;
+      font-size: 2.4rem;
       font-weight: 600;
+      justify-content: center;
+      margin-bottom: 16px;
       text-transform: uppercase; }
-      .section.offers .offers-item p {
-        height: 100%;
-        width: 100%; }
-      .section.offers .offers-item a {
-        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/wp-content/uploads/2019/02/banner-example.jpg") no-repeat center center;
-        height: 100%;
-        width: 100%;
-        padding: 16px;
-        align-items: center;
-        display: grid;
-        justify-items: center;
-        color: #ffffff;
-        font-size: 2.6rem; }
-        .section.offers .offers-item a:hover {
-          text-decoration: none;
-          background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url("/wp-content/uploads/2019/02/banner-example.jpg") no-repeat center center; }
-  .section.about {
-    background-color: #333333;
-    color: #ffffff; }
-    .section.about .section-wrapper {
-      display: grid;
-      text-align: center; }
       @media (min-width: 768px) {
-        .section.about .section-wrapper {
-          margin: 0 auto;
-          width: 500px; } }
-  .section.contact {
-    background-color: #000000;
-    color: #ffffff; }
-    .section.contact .form-block .wpcf7-form-control-wrap {
-      width: 100%; }
+        .row .block-inner .block {
+          flex-basis: 32.333%;
+          font-size: 2rem; } }
+      .row .block-inner .block:last-child {
+        margin-bottom: 0; }
+  .row.about {
+    background-color: #333333;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column; }
     @media (min-width: 768px) {
-      .section.contact .section-wrapper {
-        width: 756px;
-        width: 600px;
-        margin: 0 auto;
-        padding: 0; } }
+      .row.about .text-wrapper {
+        margin-left: auto;
+        margin-right: auto;
+        width: 500px; } }
+  @media (min-width: 768px) {
+    .row.mantra .content-inner {
+      display: flex;
+      flex-direction: row; } }
+  .row.mantra .img-wrapper {
+    margin-bottom: 24px; }
+    @media (min-width: 768px) {
+      .row.mantra .img-wrapper {
+        flex: 1 0 50%;
+        margin-right: 16px; } }
 
 .contact form {
   display: flex;
@@ -379,7 +360,7 @@ h1 {
     margin-bottom: 16px;
     text-align: center; }
     #coming-soon .title .slogan {
-      font-size: 4rem;
+      font-size: 3.8rem;
       font-weight: 900;
       text-transform: uppercase; }
       @media (min-width: 768px) {
