--- a/wp/wp-content/themes/blankslate-child/scss/section.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/section.scss
@@ -78,10 +78,14 @@
         margin-right: auto;
         width: 500px;
       }
+
+      @media ($desktop-md) {
+        width: 650px;
+      }
     }
   }
 
-  &.mantra {
+  &.ethos {
     .content-inner {
       @media ($tablet) {
         display: flex;
