--- a/wp/wp-content/themes/blankslate-child/scss/_variables.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/_variables.scss
@@ -7,8 +7,9 @@ $white: #ffffff;
 
 $yellow: #ffba00;
 $grey: #242424;
-$greyLight: #f4f4f4;
-$greyDark: #333333;
+$grey100: #f4f4f4;
+$grey200: #cccccc;
+$grey900: #333333;
 
 $spacing: 8px;
 $spacing-x2: $spacing * 2;
