--- a/wp/wp-content/themes/blankslate-child/scss/default.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/default.scss
@@ -1,3 +1,12 @@
+#default-page-title {
+  background: rgba(0, 0, 0, 0.5) url('http://localhost:8000/wp-content/uploads/2019/04/banner-example.jpg') no-repeat center top;
+  background-blend-mode: multiply;
+  background-size: cover;
+  left: auto;
+  position: relative;
+  right: auto;
+}
+
 #default-page-main {
   flex-grow: 1;
   margin-bottom: $spacing-x2;
@@ -20,6 +29,5 @@
   .content {
     flex-grow: 1;
     margin-bottom: $spacing-x2;
-    margin-right: $spacing-x2;
   }
 }
