--- a/wp/wp-content/themes/blankslate-child/scss/section.1.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/section.1.scss
@@ -45,7 +45,7 @@
   }
 
   &.offers {
-    color: $greyDark;
+    color: $grey900;
     text-align: center;
 
     .section-wrapper {
@@ -103,7 +103,7 @@
   }
 
   &.about {
-    background-color: $greyDark;
+    background-color: $grey900;
     color: $white;
 
     .section-wrapper {
