--- a/wp/wp-content/themes/blankslate-child/scss/section.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/section.scss
@@ -24,7 +24,7 @@
 
     .block {
       align-items: center;
-      background-color: $greyLight;
+      background-color: $grey100;
       box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.25);
       display: flex;
       height: 250px;
@@ -67,7 +67,7 @@
   }
 
   &.about {
-    background-color: $greyDark;
+    background-color: $grey900;
     color: $white;
     display: flex;
     flex-direction: column;
