--- a/wp/wp-content/themes/blankslate-child/scss/style.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/style.scss
@@ -24,6 +24,7 @@
 @import './buttons';
 
 @import './price-card';
+@import './testimonial';
 
 // Page Specific
 @import './pages/coming-soon.scss';
